--- a/event-dappp/package.json
+++ b/event-dappp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@privy-io/react-auth": "^2.23.0",
     "@tanstack/react-query": "^5.85.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
