--- a/event-dappp/package.json
+++ b/event-dappp/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "event-dappp",
   "version": "0.1.0",
@@ -7,13 +8,13 @@
     "@tanstack/react-query": "^5.85.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^6.15.0",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "typescript": "^4.9.5"
   }
 }
